ispCP ω 1.0.1 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-06-10 Benedikt Heintel
	- LANGUAGES:
		* Added Azerbaijani
		* Updated Japanese
		* Updated all .po files

2009-06-09 Thomas Wacker
	- GUI:
		* Fixed #1848: Suexecuser on Domain.ltd

2009-05-22 Daniel Andreca
	- GUI:
		* Fixed #1847: Manual DNS support us missing in user_add2.php

2009-05-22 Benedikt Heintel
	- DOCS:
		* Updated INSTALL files
	- ENGINE:
		* Added possible fix for autoresponder with amavis enabled
	- TOOLS:
		* Updated Squirrelmail to version 1.4.19
		* Fixed #1852: Squirrelmail page header modifications missing
		* Fixed #1853: Webmail Error r1793

2009-05-19 Benedikt Heintel
	- CONFIGS:
		* Fixed #1852: Add "AuthOrder" to the proftpd.conf
	- TOOLS:
		* Fixed #1838: Updated Squirrelmail to version 1.4.18
		* Fixed #1850: Updated phpMyAdmin to version 3.1.5

2009-05-15 Daniel Andreca
	- GUI:
		* Fixed #1839: Part of DNS JS delete message has undefined var in client/domains_manage.php
		* Fixed #1840: Variable {ID} not parsed in client/dns_add.php anytime

2009-05-14 Malte Geierhos
	- ENGINE:
		* Fixed #1843: Missing Alias for Awstats static icons
		* Fixed #1844: outdated Centos Packages (thanks to Laurence Alfred Barlow)

2009-05-13 Benedikt Heintel
	- GUI:
		* Fixed #1776: translate foreign language comments
		* Fixed #1812: order e-mail misses link url to admin panel

2009-05-13 Malte Geierhos
	- ENGINE:
		* Fixed #1841: (wrong package name in centos packagelist)
		* Fixed #1842: BASE_SERVER_VHOST_PREFIX missing in dmn_entry.tpl

2009-05-12 Daniel Andreca
	- GUI:
		* Fixed #1837: admin/ip_manage.php error

2009-05-03 Daniel Andreca
	- CONFIGS:
		* Repaired support for Ubuntu
	- GUI:
		* Improve ip management
		* Fixed #1826: Alias Subdomains aren't deleted from DB
		* Fixed #1820: Email forward validation missing

2009-05-07 Thomas Häber
	- LANGUAGES:
		* added (missing) translation strings
		* fixed translations for e-mails with {BASE_SERVER_VHOST_PREFIX}
	- GUI: