@@ -64,13 +64,7 @@ Make sure you are logged in as root and MySQL is running.
 3. Install the required modules
    First update your system:
 	# apt-get update && apt-get upgrade
-
-   for Debian Sarge use:
-	# apt-get install $(cat ./docs/Debian/debian-packages-sarge)
-   for Debian Etch use:
-	# apt-get install $(cat ./docs/Debian/debian-packages-etch)
-   for Debian Lenny/Sid use:
-	# apt-get install $(cat ./docs/Debian/debian-packages-lenny)
+	# apt-get install $(cat ./docs/Debian/debian-packages-`lsb_release -cs`)
 
    Make sure you have added the non-free into your /etc/apt/sources.list:
 
@@ -130,13 +124,7 @@ Make sure you are logged in as root and MySQL is running.
 3. Install the required modules
    first update your system:
 	# apt-get update && apt-get upgrade
-
-   for Debian Sarge use:
-	# apt-get install $(cat ./docs/Debian/debian-packages-sarge)
-   for Debian Etch use:
-	# apt-get install $(cat ./docs/Debian/debian-packages-etch)
-   for Debian Lenny/Sid use:
-	# apt-get install $(cat ./docs/Debian/debian-packages-lenny)
+	# apt-get install $(cat ./docs/Debian/debian-packages-`lsb_release -cs`)
 
    Make sure you have added the non-free into your /etc/apt/sources.list:
 
@@ -213,7 +201,7 @@ Make sure you are logged in as root and MySQL is running.
 ----------
 
 ispCP ω is a project of ispCP | isp Control Panel.
-ispCP, ispCP ω, isp Control Panel, the ispCP logo and the ω Logo are trademarks 
+ispCP, ispCP ω, isp Control Panel, the ispCP logo and the ω Logo are trademarks
 of the ispCP | isp Control Panel Project Team.
 
 Please visit our site under http://isp-control.net for further information on
